# nest_home

./: .gitignore  CLAUDE.md  DEPLOY.md  README.md  license.txt  pyproject.toml
nest_home/: api.py  boot.py  defaults.py  hooks.py  modules.txt
nest_home/attention/: schema.py
nest_home/attention/sources/: awaiting.py  todos.py
nest_home/fixtures/: custom_field.json  nest_home_tile.json
nest_home/nest_home/doctype/nest_home_layout/: nest_home_layout.json  nest_home_layout.py
nest_home/nest_home/doctype/nest_home_layout_tile/: nest_home_layout_tile.json  nest_home_layout_tile.py
nest_home/nest_home/doctype/nest_home_role_list/: nest_home_role_list.json  nest_home_role_list.py
nest_home/nest_home/doctype/nest_home_settings/: nest_home_settings.json  nest_home_settings.py
nest_home/nest_home/doctype/nest_home_tile/: nest_home_tile.json  nest_home_tile.py
nest_home/nest_home/doctype/nest_home_tile_role/: nest_home_tile_role.json  nest_home_tile_role.py
nest_home/nest_home/page/nest_home/: nest_home.html  nest_home.js  nest_home.json
nest_home/public/css/: nest_home.css
nest_home/public/help/: open-pos.html
nest_home/public/js/: nest_home_redirect.js
